Fixing text spacing issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1977,19 +1977,19 @@ input, select, textarea {
 	  margin-bottom: 0;
 	  padding-left: 1.2em; /* or adjust as needed */
 	}
-	
+
 	/* Remove margin on nested ul */
 	article ul ul {
 	  margin-top: 0;
 	  margin-bottom: 0;
 	  padding-left: 1em;
 	}
-	
+
 	/* Adjust list item spacing */
 	article ul li {
 	  margin-bottom: 0.5em; /* or reduce */
 	}
-	
+
 	/* Optionally remove margin on headers */
 	article h3 {
 	  margin-bottom: 0.5em;
@@ -2003,8 +2003,8 @@ input, select, textarea {
 		color: #999;
 		font-size: 1.25em;
 		position: relative;
-		margin-top: -1.25em;
-		margin-bottom: 2.25em;
+		margin-top: -1em;
+		margin-bottom: 1em;
 	}
 
 	header.major {
@@ -2140,7 +2140,7 @@ input, select, textarea {
 
 		.image.featured {
 			display: block;
-			margin: 0 0 2em 0;
+			margin: 0 0 0.5em 0;
 		}
 
 			.image.featured img {
@@ -3057,6 +3057,7 @@ input, select, textarea {
 
 			h1, h2, h3, h4, h5, h6 {
 				margin-bottom: 0.5em;
+				margin-top: 0.5em;
 			}
 
 			header p {
@@ -3125,6 +3126,11 @@ input, select, textarea {
 			#sidebar2,
 			#content {
 			  background-color: #1c1c1c;
+			}
+
+			/* Reduce spacing between sections in sidebar1 */
+			#sidebar1 section + section {
+			  margin-top: 1em !important;
 			}
 
 		/* Header */
